# aoc_2022

./: Cargo.toml  LICENSE  README.md
.cargo/: config
.github/workflows/: ci.yml
src/: lib.rs  main.rs
