[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["Cryptex"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pico-args = "0.5.0"
relative-path = "1"
ahash = "0"
